# homepage

./: .gitignore  README  cabal.project  deploy  test
content/: 404.html  404.md  Makefile  README  TODO  content.cabal  hakyll.hs  index.html  index.md
content/blog/: 2011-05-22-MonadTransformers.lhs  2011-05-23-LittleHaskeller.lhs  2011-06-03-GSocIntroduction.md  2011-08-22-GSoC-Final.md  2012-04-30-Cabal-sandbox.md  2012-04-XX-Cabal-sandbox.md  2013-07-30-Cabal-sandbox.md  2013-08-20-Cabal-sandbox.md  2013-08-21-Cabal-1-18.md  2016-05-04-Cabal-1-24.md  2017-09-11-Cabal-2-0.md
content/css/: style.css
content/drafts/: 2013-08-21-Cabal-1-18.md
content/img/: sandboxes-pic-0.dot  sandboxes-pic-1.dot  sandboxes-pic-2.dot
content/templates/: base.html  default.html  entries.html  entry.html  entryitem.html  index.html  tags.html
server/: README  server.cabal  static
server/src/: Main.hs
