name:               content
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          hakyll.hs
  build-depends:    base == 4.*
                  , hakyll == 4.9.*
                  , pandoc
  ghc-options:      -threaded
  default-language: Haskell2010
