Name:                server
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable server
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base >= 4 && < 5,
    hashable < 1.2 || >= 1.2.0.5,
    bytestring >= 0.9 && < 0.11,
    snap-core == 0.9.*,
    snap-server == 0.9.*

  ghc-options: -threaded -Wall -fwarn-tabs -O2
