Name:                server
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable server
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base,
    hashable,
    bytestring,
    snap-core == 1.0.*,
    snap-server == 1.0.*

  ghc-options: -threaded -Wall -fwarn-tabs -O2
